공개 도메인 기반 로그인 복귀와 공유 쿠키 처리